--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pm2-start": "pm2 start",
     "start": "ts-node-dev --rs src/index.ts",
-    "test": "jest --watchAll --no-cache"
+    "test": "jest --watchAll --no-cache",
+    "build": "tsc -p tsconfig.json"
   },
   "jest": {
     "preset": "ts-jest",
