--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pm2-start": "pm2 start",
+    "pm2-start": "pm2 start src/index.ts",
     "start": "ts-node-dev --rs src/index.ts",
     "test": "jest --watchAll --no-cache",
     "build": "tsc -p tsconfig.json"
